# soromantic

./: .containerignore  .gitignore  Cargo.toml  Containerfile  LICENSE  README.md  clippy.toml  config.toml.example  justfile  mise.toml
.github/workflows/: ci.yml  release.yml
assets/scrapers/: pv.rn  pv_model.rn
completions/: just.fish
core/: Cargo.toml
core/migrations/: 20240125000000_init.sql  20240125000001_indexes.sql  20260127000000_normalize_relations.sql  20260204120000_optimize_video_sources.sql  20260207000000_add_model_metadata.sql  20260209000000_unique_taxonomy_names.sql  20260508000000_rompla_schema.sql
core/src/: batch.rs  cache.rs  config.rs  constants.rs  ffi.rs  images.rs  lib.rs  model_workflow.rs  mpv.rs  previews.rs  startup.rs  types.rs  utils.rs  video_workflow.rs
core/src/db/: commands.rs  mod.rs  models.rs
core/src/db/queries/: library.rs  media.rs  mod.rs  performers.rs  studios.rs
core/src/downloader/: core.rs  ffmpeg.rs  image_processing.rs  mod.rs  paths.rs
core/src/downloader/tasks/: covers.rs  grid.rs  mod.rs  videos.rs
core/src/media/: desktop.rs  mod.rs
core/src/scraper/: mod.rs  pv.rs  xv.rs
core/src/scripting/: glue.rs  html.rs  http.rs  mod.rs  progress.rs  util.rs
core/src/ui/: mod.rs
core/test_output/: test.db-shm  test.db-wal
core/tests/: export_bindings.rs  minimal_rune_test.rs  model_scraper_test.rs  rune_pv_test.rs  scraper_pv_test.rs  scraper_xv_test.rs  scripting_test.rs  types_test.rs
docs/: build_and_release.md  linux_setup.md  windows_setup.md
egui/: Cargo.toml
egui/src/: app.rs  data.rs  lib.rs  main.rs  server.rs
egui/src/state/: actions.rs  async_tasks.rs  grid.rs  images.rs  init.rs  mod.rs  model_studio.rs  nav.rs  navigation.rs  scrape.rs  selection.rs
egui/src/ui/: details.rs  footer.rs  lists.rs  mod.rs
egui/src/ui/grid/: actions.rs  input.rs  mod.rs  pagination.rs  view.rs
egui/src/ui/related/: actions.rs  data.rs  header.rs  input.rs  layout.rs  mod.rs
scripts/: debug_offline.py  fix_db_hybrid.py  fix_duplicate_models.py  fix_previews.py  normalize_relations.py  pyproject.toml  restore_relations.py  test_parse.py
scripts/soromantic_utils/maintenance/: deduplicate_links.py
scripts/src/soromantic_utils/: common.py  media.py
scripts/src/soromantic_utils/ci/: build.py  export.py
scripts/src/soromantic_utils/maintenance/: backfill_thumbs.py  clean_incorrect_resolutions.py  cleanup_broken_media.py  delete_page.py  download_missing_thumbs.py  download_pages.py  fix_bad_480p.py  fix_missing_thumbs.py  fix_video_resolutions.py  force_probe.py  get_page_url.py  get_video_duration.py  get_video_url.py  nuke_xvideos.py  probe_local_durations.py  process_offline_pages.py  repair_missing_sources.py  rescrape_related.py  set_default_intervals.py  sync_thumb_status.py
scripts/src/soromantic_utils/migrations/: add_has_video_column.py  add_model_metadata.py  add_start_stop.py  backfill_grid_target_id.py  fix_db_slashes.py  fix_hls_extensions.py  fix_html_entities.py  fix_missing_files.py  fix_xv_studios.py  migrate_576_to_480.py  migrate_add_indexes.py  migrate_duration_real.py  migrate_page_centric.py  migrate_paths_relative.py  migrate_status_2_to_3.py  move_intervals_to_sources.py  remove_video_sources_url.py  verify_urls.py
scripts/src/soromantic_utils/misc/: analyze_576.py  capture_ui.py  check_platformdirs.py  crop_thumbnails.py  debug_video_status.py  mcp_justfile.py  ui_interaction.py  videos_metadata.py  visual_test.py  visual_test_fltk.py
thumb-dl/: Cargo.toml
thumb-dl/src/: main.rs
windows/: install.ps1  verification.wsb
