[workspace]
members = [
    "core",
    "egui",
    "thumb-dl",
]
resolver = "2"

# Optimize dependencies even in debug builds (huge win for image/winit)
[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true       # Strip symbols for smaller binary
lto = true         # Enable Link Time Optimization
codegen-units = 1  # Maximize optimization (slower build)
opt-level = 3      # Optimize for speed
debug = 0          # No debug info

[profile.release-debug]
inherits = "release"
strip = false      # Keep symbols for backtrace
lto = false        # Fast LTO
codegen-units = 16 # Parallel code generation

[workspace.lints.rust]
# unsafe_code = "deny" # Uncomment if you want to ban unsafe blocks completely

[workspace.lints.clippy]
# Groups
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }       # Upgraded to deny
pedantic = { level = "warn", priority = -1 }   # Keep warn, deny is usually too noisy
nursery = { level = "warn", priority = -1 }    # New lints!
cargo = { level = "warn", priority = -1 }      # Lints for Cargo.toml

# Specific Restriction Lints (Optional - "Super Strict" inclusions)
unwrap_used = "warn"  # Warns on .unwrap() (force error handling)
expect_used = "warn"  # Warns on .expect()
multiple_crate_versions = "allow" # Dependency hell is unavoidable
cargo_common_metadata = "allow" # Private project


