[package]
name = "soromantic-egui"
version = "0.1.0"
edition = "2024"
authors = ["Gianni Ferrarotti <gianni.ferrarotti@gmail.com>"]
repository = "https://github.com/giannifer7/soromantic"
description = "A romantic video library manager (Egui native)"
license = "MIT"

[lints]
workspace = true

[lib]
name = "soromantic_egui"
path = "src/lib.rs"

[[bin]]
name = "soromantic"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.30.0", default-features = true, features = ["wayland", "x11", "default_fonts", "glow"] } # Wrapper for egui
egui = "0.30.0"
egui_extras = { version = "0.30.0", features = ["all_loaders"] } # For images
gumdrop = "0.8"
image = { version = "0.25", features = ["jpeg", "png", "webp"] } # For texture loading
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] } # For API calls
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# axum removed

soromantic-core = { path = "../core" }
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
ehttp = "0.5"
arboard = "3"
anyhow = "1.0.100"

[target.'cfg(target_os = "linux")'.dependencies]
wl-clipboard-rs = "0.9.3"

[package.metadata.aur]
depends = [
    "gcc-libs",
    "glibc",
    "libx11",
    "libxcursor",
    "libxrandr",
    "libxi",
    "libxkbcommon",
    "wayland",
    "mpv",
    "sqlite",
    "ffmpeg",
]

[package.metadata.deb]
maintainer = "Gianni Ferrarotti <gianni.ferrarotti@gmail.com>"
copyright = "2024-2025, Gianni Ferrarotti"
depends = "$auto, mpv, ffmpeg"
section = "video"
priority = "optional"
assets = [
    ["target/release/soromantic", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/soromantic", dest = "/usr/bin/soromantic", mode = "755" }
]
