# /// script
# requires-python = ">=3.14"
# dependencies = [
#     "beautifulsoup4",
#     "httpx",
# ]
# ///
[project]
name = "pyssvids-scripts"
version = "0.1.0"
description = "Development scripts and tools for pyssvids"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "mcp>=1.0.0",
    "pexpect>=4.9.0",
    "pillow>=12.1.0",
    "platformdirs>=4.0.0",
]



[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pylint>=3.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soromantic_utils"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pylint.format]
max-line-length = 100

[tool.pylint.main]
ignore = []
recursive = true
source-roots = ["src/pyssvids"]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0902",  # too-many-instance-attributes
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0917",  # too-many-positional-arguments
    "W0718",  # broad-exception-caught
    "W1514",  # unspecified-encoding
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pylint",
    "types-pyautogui>=0.9.3.20241230",
]
