[package]
name = "thumb-dl"
version = "0.1.0"
edition = "2021"

[dependencies]
# Reuse core logic
soromantic-core = { path = "../core" }

# Async runtime
tokio = { version = "1.41.1", features = ["full"] }

# Database
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio", "tls-rustls"] }

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Error handling
anyhow = "1.0.93"

# HTML parsing
scraper = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Filesystem
walkdir = "2.5"
